# Smart_Insole_UCL

./: README.md
Double_Sensing_Solution/: README.md
Double_Sensing_Solution/3D_Model/ISCAS_Diagram_model/: fh28d-64s-0_5sh_05_.stp
Double_Sensing_Solution/DataCollection/: DoubleFrame_Crosstalk_Free.py  SingleFrame_Crosstalk_Free.py
Double_Sensing_Solution/ESP_MCU_Code/: CMakeLists.txt  sdkconfig  sdkconfig.old
Double_Sensing_Solution/ESP_MCU_Code/main/: CMakeLists.txt  Kconfig.projbuild  adc_continuous.c  adc_continuous.h  dac_continuous.c  dac_continuous.h  imu_icm45686.c  imu_icm45686.h  main.c  sensor_config.h  system_interface.c
Double_Sensing_Solution/Multisim_Simulation/: resistor_network.ms14  resistor_network_diode.ms14
Double_Sensing_Solution/PCB/Dip_Laser_Cut/: Insole_42.dip
Double_Sensing_Solution/PCB/Insole_MCU/: Insole_MCU.SchDoc
Double_Sensing_Solution/PCB/Insole_ver2/: Insole_ver2.PcbDoc  Insole_ver2.SchDoc
Double_Sensing_Solution/WiFi_Server_Code/: ESP_doubleF_RAW_server.py  ESP_singleF_RAW_IMU_EXCEL.py  ESP_singleF_RAW_IMU_server.py
Potential_Divider_Solution/PCB/Dip_Laser_Cut/: MAT_32.dip
Potential_Divider_Solution/PCB/Insole_ver1/: Insole_ver1.PcbDoc  Insole_ver1_chi.SchDoc
Potential_Divider_Solution/PCB/MUX_STACK_ver1/: mux_stack_espE.SchDoc  mux_stack_espE_64pin.PcbDoc
Potential_Divider_Solution/Software_Code/Model_training/: cnn_lstm_model.py  data_preprocess.py  frame_animation.py  training.py
Potential_Divider_Solution/Software_Code/UDP_server/: Wifi_server_ESP.py  cam_pressure_record.py  cam_record_2_csv.py  (+2 more)
(+205 files in other folders)
